# GreenAssembly-website

./: .env  .gitignore  Cargo.toml  README.md  Readme.md  askama.toml  cert.pem  gacli.toml  key.pem  package.json  pnpm-lock.yaml  regexes.yaml  robots.txt  sitemap.xml  webpack.config.js
.build/development/: agency.js  assets_wasm_pkg_wasm_bg_js.js  contact.js  global.js  swiper.js  website_creation.js
.build/development/components/: stepper.css
.build/development/pages/: agence.css  contact.css  global.css  index.css  portfolio.css  swiper.css  website_creation.css
.github/workflows/: rust.yml
assets/js/: admin.js  agency.js  carousel.js  contact.js  global.js  motion_home_player.js  post.js  project.js  swiper.js  website_creation.js
assets/js/components/: carousel.js  checkbox.js  form.js  lightbox.js
assets/js/pages/: agency.js  blog_post.js  contact.js  faq.js  index.js  portfolio_project.js
assets/js/utils/: lazy_loader.js  router.js
assets/scss/: admin.scss  global.scss
assets/scss/abstracts/: _variables.scss
assets/scss/base/: _animations.scss  _background.scss  _borders.scss  _container.scss  _cursor.scss  _display.scss  _float.scss  _grid.scss  _margins.scss  _opacity.scss  _overflow.scss  _placement.scss  _space.scss  _text.scss  _typography.scss  _width.scss  _zindex.scss
assets/scss/components/: _button.scss  _card.scss  _icon.scss  _input.scss  _lightbox.scss  _stepper.scss  _swiper.scss  carousel.scss  stepper.scss  swiper.scss
assets/scss/layout/: _banner.scss  _blog_menu.scss  _footer.scss  _menu.scss
assets/scss/pages/: 404.scss  agence.scss  agency.scss  contact.scss  faq.scss  global.scss  index.scss  legals.scss  onepage.scss  portfolio.scss  project.scss  swiper.scss  website_creation.scss
assets/wasm/: Cargo.toml
assets/wasm/src/: lib.rs
public/: sitemap.xml
sql/: functions.sql  inserts.sql  migration.sql  tables.sql
src/: main.rs  templates.rs
src/controllers/: admin.rs  blog.rs  contact.rs  employees.rs  ips_banned.rs  metrics.rs  mod.rs  newsletter.rs  users.rs  website.rs
src/controllers/api/: metrics.rs
src/middlewares/: ban.rs  hsts.rs  https.rs  mod.rs  www.rs
src/models/: attempts.rs  mod.rs  pages.rs  users.rs
src/models/blog/: categories.rs  mod.rs  (+2 more)
src/routes/: admin.rs  api.rs  blog.rs  contact.rs  mod.rs  newsletter.rs  users.rs  website.rs
src/services/: employees.rs  ips_banned.rs  metrics.rs  mod.rs  pages.rs  users.rs
src/tests/: mod.rs
src/utils/: HSTS.rs  encode_pwd.rs  error_logger.rs  mod.rs  multipart.rs  ua.rs  www.rs
templates/: 404.html  agency.html  back_office.html  base.html  blog.html  contact.html  e_commerce_website.html  faq.html  front_office.html  index.html  legals.html  onepage_website.html  portfolio.html  showcase_website.html  website_creation.html
templates/blog/: index.html  view_article.html
templates/components/: blog_post.html  employee.html  project.html
templates/includes/: footer.html  metrics.html  navbar.html
templates/pages/: 404.html  agency.html  contact.html  e_commerce_website.html  faq.html  index.html  legals.html  newsletter_confirm.html  onepage_website.html  showcase_website.html  website_creation.html
templates/portfolio/: index.html
(+39 files in other folders)
