[package]
name = "website"
version = "0.1.0"
authors = ["Guillaume Gueyraud <g.gueyraud@greenassembly.fr>", "Vincent Bréhaut <v.brehaut@greenassembly.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.5.0"
actix-web = { version = "3.3.3", features = ["rustls"] }
actix-service = "1"
actix-identity = "0.3.1"
actix-rt = "2.2.0"
actix-cors = "0.5.4"
askama = { version = "0.11.0", features = ["serde-json"] }
env_logger = "0.9.0"
dotenv = "0.15.0"
rand = "0.8.4"
futures = "0.3.19"
futures-util = { version = "0.3.19", default-features = false }
user-agent-parser = "0.3.0"
lettre = "0.9.6"
argon2 = "0.3.2"
lettre_email = "0.9.4"
serde = { version = "1.0.134", features = ["derive"] }
serde_json = "1.0.75"
sqlx = { version = "0.5.10", features = ["macros", "postgres", "chrono", "runtime-async-std-native-tls", "uuid"] }
chrono = { version = "0.4.19", features = ["serde"] }
regex = "1.5.4"
rustls = "0.18.1"
ring = "0.16.20"
slugmin = "1.0.2"